# ff-core-api-and-workflow

./: .env.example  .gitignore  README.md  alembic.ini  check_db.py  pyproject.toml  requirements.txt  run.py  seed_credits.py  test_portals.py  test_workflow.py
alembic/: env.py
alembic/versions/: 36fc4007314c_initial_migration_for_workflow_and_.py  45fffc4fb965_add_project_invitation_evidence_and_.py
infra/: Dockerfile.core  docker-compose.yml
src/: main.py
src/api_core/billing/: credit_ledger.py  invoicing.py
src/api_core/models/: assessment_metadata.py
src/api_core/routers/: assessment.py  evidence_s3.py  respondent.py
src/api_core/services/: queue_service.py
src/billing/: __init__.py  models.py  service.py
src/core/: config.py  database.py  email_service.py  s3_service.py  security.py  storage.py
src/portals/: __init__.py
src/portals/customer/: router.py  service.py
src/portals/respondent/: router.py  service.py
src/web/components/: assess_creation.js
src/web/pages/dashboard/: customer_portal.js
src/web/pages/respondent/: [id].js
src/web/styles/: branding.css
src/workflow/: invitation_service.py  models.py  router.py  service.py  submission_service.py
