[tool.poetry]
name = "ff-core-api-and-workflow"
version = "0.1.0"
description = "Core API and Workflow Engine for FutureForm Trust Intelligence Engine"
authors = ["FutureForm AI Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.0"}
python-dotenv = "^1.0.1"
requests = "^2.31.0"
boto3 = "^1.34.0"  # For S3 integration

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
black = "^24.1.0"
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
